--- a/DS-uniit-1/module4-make-explanatory-visualizations/DS_114_Make_Explanatory_Visualizations_Assignment_AG.ipynb
+++ b/DS-uniit-1/module4-make-explanatory-visualizations/DS_114_Make_Explanatory_Visualizations_Assignment_AG.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "Researchers recorded data on sleep duration as well as a set of ecological and constitutional variables for a selection of mammal species.\n",
     "\n",
-    "The data dictionary can be accessed here: https://github.com/bloominstituteoftechnology/data-science-practice-datasets/tree/main/unit_1/Sleep in the READ ME file.\n",
+    "The data dictionary can be accessed here: https://github.com/Talenga/Data-science-and-Machine-Learning-AI-/blob/main/DS-uniit-1/module4-make-explanatory-visualizations/data/Sleep.csv \n",
     "\n",
     "*Source: Allison, T. and Cicchetti, D. (1976), \"Sleep in Mammals: Ecological and Constitutional Correlates\", Science, November 12, vol. 194, pp. 732-734.*\n"
    ]
